<resources>
    <string name="app_name">Hotel Management</string>
    <string name="home">Home</string>
    <string name="statistic">Statistic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_room">Manage room</string>
    <string name="manage_room_type">Manage room type</string>
    <string name="manage_room_expenses">Manage room expenses</string>
    <string name="manage_room_facilities">Manage room facilities</string>
    <string name="manage_client">Manage client</string>
    <string name="manage_photo">Manage photos</string>
    <string name="facility_name">Facility name</string>
    <string name="create_new_facility">Create new facility</string>
    <string name="hold_item_notice">Hold the item to modify</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="facility_name_cannot_be_empty">Facility name cannot be empty</string>
    <string name="update_facility">Update facility</string>
    <string name="facilities">Facilities</string>
    <string name="phone_number">Phone number</string>
    <string name="client_name">Client name</string>
    <string name="client_phone_number">Phone number</string>
    <string name="country">Country</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="clients">Clients</string>
    <string name="create_new_client">Create new client</string>
    <string name="client_country">Client country</string>
    <string name="sex">Sex</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="room_type_name">Room type name</string>
    <string name="room_type_price">Room type price</string>
    <string name="room_type">Room Type</string>
    <string name="create_new_type">Create new type</string>
    <string name="create_new_room_type">Create new room type</string>
    <string name="add_facility">Add facility</string>
    <string name="add_photo">Add photo</string>
    <string name="remove">Remove</string>
    <string name="choose_an_item_to_add">Choose an item to addd</string>
    <string name="facility_added">Facilitity added!</string>
    <string name="input_photo_url">Input photo url</string>
    <string name="photo_url">Photo url</string>
    <string name="photo_added">Photo added!</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="room_type_added">Room type added!</string>
    <string name="back">Back</string>
    <string name="room_type_facilities">Facilities:</string>
    <string name="room_type_photos">Photos:</string>
    <string name="rooms">Rooms</string>
    <string name="create_new_room">Create new room</string>
    <string name="room_number">Room number</string>
    <string name="_00">00</string>
    <string name="mm_yyyy">mm/yyyy</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="reservations">Reservations</string>
    <string name="create_new_reservation">Create new reservation</string>
    <string name="reservation_dialog_title">Add reservation</string>
    <string name="select_date_check_in">Select check in date</string>
    <string name="select_date_check_out">Select check out date</string>
    <string name="manage_reservation">Manage reservation</string>
    <string name="room">Room</string>
    <string name="total_income">Total income</string>
    <string name="top_clients">Top clients</string>
    <string name="top_clients_in_2023">Top clients in 2023</string>
    <string name="total_income_by_year">Total income by year</string>
    <string name="year">Year</string>
    <string name="revenue">Revenue</string>
    <string name="additional_expenses">Additional expenses</string>
</resources>