<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_create_facility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_facility"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/til_facility_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_facility_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/facility_name"
        app:layout_constraintBottom_toTopOf="@+id/layoutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_facility">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_facility_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_facility_name"
        app:layout_constraintBottom_toTopOf="parent">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>